Applied z-index: 20; to header to fix priority issue between header and carousel.

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -6,17 +6,18 @@ body {
     /* Header */
 .header {
     position: fixed;
+    z-index: 20;
     top: 0;
     width: 100%;
-    height: 80px;
+    height: 82px;
     background-color: black;
 }
  /* Header Image */
 .headerHomeImg {
     position: fixed;
     float: left;
-    width: 80px;
-    height: 80px;
+    width: 82px;
+    height: 82px;
     margin-left: 5px;
     border-radius: 50%;
     border-style: solid;
@@ -39,20 +40,10 @@ body {
     background-image: linear-gradient( white, silver);
 }
 
-/* Navbar row */
-.headerBottomNav {
+/* Store and Cart */
+.storeCartBox {
     display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
-    margin-top: 4px;
-    background-image: linear-gradient( silver, white);
-}
-
-header .dropdown-header {
-    background-color: gold;
-}
-
-.dropdown-menu {
-    padding: 0;
+    grid-template-columns: 50% 50%;
 }
 
 /* Account */
@@ -67,10 +58,12 @@ header h6 {
     text-transform: uppercase;
 }
 
-/* Store and Cart */
-.storeCartBox {
+/* Navbar row */
+.headerBottomNav {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    margin-top: 4px;
+    background-image: linear-gradient( silver, white);
 }
 
 /* All Header Icons */
@@ -106,16 +99,33 @@ header a:hover {
     }
 }
 
+/* Dropdown  */
+header .dropdown-header {
+    background-color: gold;
+}
+
+.dropdown-menu {
+    padding: 0;
+}
+
     /* Main content of the page */
 main {
     margin: 100px 5% 50px 5%;
     text-align: center;
 }
 
+p {
+    margin: 15px 0;
+}
+
+ol, ul {
+    padding-left: 25px;
+}
+
     /* Footer */
 footer {
     width: 100%;
-    background-color: hsl( 0, 0%, 75%);
+    background-image: linear-gradient(silver, white);
     padding: 50px 0 150px 0;
     border-top: solid 4px black;
 }
@@ -139,6 +149,7 @@ footer {
     height: auto;
 }
 
+/* Computer browser styling */
 @media only screen and (min-width: 1025px) {
     body {
         background-color: black;
